# All data of the Actress in DetailView
class ActressDetail():
    def __init__(self, id, name, pixmap):
        self.id = id
        self.name = name
        self.pixmap = pixmap
        self.genres = []
        self.moviesDf = []
        self.about = ""
        self.avRating = 0.00
        self.awards = {}
